checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000270723.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#42: 
> > arch/x86/mm/kmmio.c:85: error: implicit declaration of function 'list_for_each_entry_rcu'

WARNING:TYPO_SPELLING: 'havent' may be misspelled - perhaps 'haven't'?
#60: 
combined trees without also getting the merge fixup], but havent found a 
                                                          ^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '668a6c3654560aef8741642478973e205a4f02bf', maybe rebased or not pulled?
#66: 
commit 668a6c3654560aef8741642478973e205a4f02bf

WARNING:BAD_SIGN_OFF: Do not use whitespace before Signed-off-by:
#72: 
    Signed-off-by: Thomas Gleixner <tglx@linutronix.de>

The signed-off-by line does not fall in line with the standards
specified by the community.

See: https://www.kernel.org/doc/html/latest/process/submitting-patches.html#developer-s-certificate-of-origin-1-1

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000270723.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 4 warnings, 0 checks, 7 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000270723.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
